2004-11-27  Baurjan Ismagulov  <ibr@ata.cs.hun.edu.tr>

	Committed by Andrw Cagney.
	* abug-rom.c, ada-lang.c, ada-typeprint.c, alpha-tdep.c: i18n
	markup.
	
2004-12-12  Andrew Cagney  <cagney@gnu.org>

	* frame.c (get_prev_frame): When unwinding normal frames, check
	that the PC isn't zero.
	* hppa-tdep.c (hppa_stub_frame_unwind_cache): Delete check for a
	zero PC.

	* MAINTAINERS: Reword description of what "Target Instruction Set
	Architectures" covers.

2004-12-12  Mark Kettenis  <kettenis@gnu.org>

	* hppa-hpux-nat.c (hppa_hpux_child_can_run): Tweak comment.

2004-12-11  Mark Kettenis  <kettenis@gnu.org>

	* hppa-hpux-nat.c (ss_mpsfu_high): Remove define.
	(hppa_hpux_save_state_offset): New function, replacing variable
	with the same name.
	(hppa_cannot_fetch_register, hppa_cannot_store_register): Remove
	functions.
	(hppa_hpux_fetch_register): Don't call hppa_cannot_fetch_register.
	Use new hppa_hpux_save_state_offset function.  Add special
	handling for handling 64-bit "flags" register.
	(hppa_hpux_store_register): Likewise.
	(hppa_hpux_child_can_run): Tweak comment.

	* inf-ttrace.c (inf_ttrace_him): Set TTEVT_BPT_SSTEP if available.
	(inf_ttrace_attach): Likewise.
	(inf_ttrace_resume_callback): New function.
	(inf_ttrace_resume): Don't use TT_PROC_CONTINUE.  Iterate over all
	lwps and call inf_ttrace_resume_callback instead.
	(inf_ttrace_wait): Handle TTEVT_BPT_SSTEP.

	* inf-ttrace.c (_initialize_inf_ttrace): Unconditionially compile.

2004-12-10  Michael Snyder  <msnyder@redhat.com>

	* mn10300-tdep.c: New file.  This is a re-implementation of
	the mn10300 target back-end using the new frame api etc.
	* mn10300-tdep.h: New file.
	* config/mn10300/mn10300.mt: New file (or replace old file).
	* configure.tgt: Add mn10300 target.

2004-12-10  Mark Kettenis  <kettenis@gnu.org>

	* configure.host (hppa*-*-hpux11*): Remove.
	* config/pa/hpux11.mh: Remove file.

	* hppa-hpux-tdep.c (hppa_hpux_sigtramp_frame_unwind_cache): Fix
	typo.
